# t5-fastapi

./: Dockerfile  README.md  pyproject.toml
api/v1/: translate.py
core/: config.py
schemes/: translateSchemas.py
t5_fastapi/: main.py
