[tool.poetry]
name = "t5-fastapi"
version = "0.1.0"
description = ""
authors = ["Vuk Stajkic <vukstajkic@hotmail.com>"]
readme = "README.md"
packages = [{include = "t5_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
transformers = "^4.21.3"
sentencepiece = "^0.1.97"
pydantic = "^1.10.2"
# torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
# torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.13.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
# torchaudio = {url = "https://download.pytorch.org/whl/cpu/torchaudio-0.12.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"


[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "t5_fastapi.main:start"

